@@ -1,7 +1,7 @@
 ## Interface: 60000
 ## Title: Lib: IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v61
+## Version: v62
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica
 ## DefaultState: Enabled
